--- a/examples/vanillajs/extend.html
+++ b/examples/vanillajs/extend.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://bsecure-dev.s3-eu-west-1.amazonaws.com/stage/bApps/payment-plugin/bsecure-PaymentPlugin.js"></script>
+    <script src="https://bsecure-prod.s3.eu-west-1.amazonaws.com/prod/bApps/payment-plugin/plugin.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css">
